--- a/new-action/index.html
+++ b/new-action/index.html
@@ -53,7 +53,7 @@
 
   <script>
     // Fetch the subfolder list dynamically
-    fetch('https://api.github.com/repos/LoveSkylark/loveskylark.github.io/contents/')
+    fetch('https://api.github.com/repos/<NewOwner/newowner.github.io>/contents/')
       .then(response => response.json())
       .then(data => {
         const subfolderList = document.getElementById('subfolder-list');
